--- a/header.html
+++ b/header.html
@@ -96,7 +96,7 @@ tr.header
     font-weight: bold;
 }
 
-span.toplogo
+.toplogo
 {
     font-size: 40px;
     font-family: Georgia, Times, "Luxi Serif", "Times New Roman", serif;
@@ -104,7 +104,7 @@ span.toplogo
     font-style: italic;
 }
 
-span.title
+.title
 {
     font-family: Georgia, Times, "Luxi Serif", "Times New Roman", serif;
     font-size: 32px;
